# sx126x-driver

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: toolchain-generic.cmake
core/: CMakeLists.txt
core/include/sx126x/: bus.h  config.h  hal.h  log.h  sx126x.h  types.h
core/src/: sx126x.c
docs/: driver_architecture.md
examples/: CMakeLists.txt
examples/minimal_build/: CMakeLists.txt  main.c
hal/esp32/: CMakeLists.txt
hal/esp32/include/sx126x/: hal_esp32.h
hal/esp32/src/: sx126x_hal_esp32.c
